remove comments and improve stages reading [skip ci]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
   "files.trimTrailingWhitespace": true,
   "yaml.schemas": {
     "https://json.schemastore.org/github-workflow.json": ".github/workflows/"
-  }
+  },
+  "editor.rulers": [80]
 }
